# video-pipeline-editor

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json
docs/: ADDING_NODES.md
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  LICENSE  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: metadata.rs  mod.rs  pipeline.rs  spectrum.rs  system.rs  vmaf.rs
src-tauri/src/services/: mod.rs  trim_audio_service.rs  trim_service.rs
src-tauri/src/services/ffmpeg/: audio_conversion.rs  audio_info.rs  audio_spectrum.rs  frame_extraction.rs  mod.rs  video_conversion.rs  video_info.rs  video_trimming.rs  vmaf_analysis.rs
src-tauri/src/services/pipeline_executor/: execution_context.rs  mod.rs  node_handlers.rs  node_helpers.rs  pipeline_executor.rs  vmaf_processor.rs
src-tauri/src/types/: audio.rs  errors.rs  mod.rs  pipeline.rs  video.rs
src-tauri/src/utils/: ffmpeg_config.rs  ffmpeg_validator.rs  file_utils.rs  mod.rs  path_utils.rs
src/components/: BaseNode.tsx  NodeUI.tsx
src/constants/: nodeTypes.tsx
src/hooks/: useCopyPaste.tsx  useKeyboardShortcuts.tsx  useNodeManagement.tsx  usePipeline.tsx
src/nodes/: ConvertAudioNode.tsx  ConvertVideoNode.tsx  GridViewNode.tsx  InfoAudioNode.tsx  InfoVideoNode.tsx  InputAudioNode.tsx  InputVideoNode.tsx  SequenceExtractNode.tsx  SpectrumAnalyzerNode.tsx  TrimAudioNode.tsx  TrimVideoNode.tsx  ViewVideoNode.tsx  VmafAnalysisNode.tsx
src/services/: nodeDataPropagation.tsx  pipelineExecution.tsx
src/types/: pipeline.tsx  (+1 more)
(+23 files in other folders)
