[package]
name = "video-pipeline-editor"
version = "0.1.0"
description = "A video processing pipeline editor"
authors = ["https://github.com/barckley75"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "video_pipeline_editor"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2.0"
tauri-plugin-dialog = "2.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.0"
dirs = "5.0"

# Additional dependencies that might be useful for video processing
# Uncomment these if you need them:

# For better error handling and display
# anyhow = "1.0"
# thiserror = "1.0"

# For file operations and path handling  
# walkdir = "2.0"

# For async file operations
# tokio-fs = "0.1"

# For better logging
# tracing = "0.1"
# tracing-subscriber = "0.3"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
